Remove display from ellipsis mixin

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -88,13 +88,20 @@
   vertical-align: middle;
 }
 
+
+/**
+ *  Text utilities
+ */
+
 .ellipsis {
   @include ellipsis();
 }
 
 .ellipsis-block {
-  @include ellipsis(block);
+  @include ellipsis();
+  display: block;
 }
+
 
 
 /**
