.scss ext is not needed for sass to compile

--- a/src/scss/_bootstrapgrid.scss
+++ b/src/scss/_bootstrapgrid.scss
@@ -2,8 +2,8 @@
  * Grid system
  */
 
-@import 'bootstrapgrid/grid.scss';
-@import 'bootstrapgrid/grid-framework.scss';
+@import 'bootstrapgrid/grid';
+@import 'bootstrapgrid/grid-framework';
 
 
 // Container widths
