--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,7 @@
  */
 
 // Init variables
-@import 'variables.scss';
+@import 'variables';
 
 // Add library
-@import 'sierra.scss';
-
+@import 'sierra';
