--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -97,6 +97,21 @@ $textColourMap: (
 	warning: $color-warning
 );
 
+$backgroundColourMap: (
+	primary: $brand-primary,
+	dark: $brand-dark,
+	secondary: $brand-secondary,
+	white: $white,
+	success: $color-success,
+	info: $color-info,
+	warning: $color-warning,
+	error: $color-error,
+	grey: $background-grey,
+	grey-dark: $grey-dark,
+	grey-soft: $grey-soft,
+	grey-light: $grey-light
+);
+
 
 // Links
 
@@ -136,7 +151,18 @@ $rating8: 		#4caf50;
 $rating9: 		#43a047;
 $rating10: 		#388e3c;
 
-
+$backgroundColourMap: map-merge($backgroundColourMap, (
+	rating1: $rating1,
+	rating2: $rating2,
+	rating3: $rating3,
+	rating4: $rating4,
+	rating5: $rating5,
+	rating6: $rating6,
+	rating7: $rating7,
+	rating8: $rating8,
+	rating9: $rating9,
+	rating10: $rating10
+));
 
 
 /**
