--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,231 +1,231 @@
 /**
- * Buttons
- */
+* Buttons
+*/
 
 // reset default buttons
 button {
-  background-color: transparent;
-  border: 0;
-  cursor: pointer;
+	background-color: transparent;
+	border: 0;
+	cursor: pointer;
 }
 
 .button {
-  background-color: $button-color;
-  border: 1px solid $button-border-color;
-  border-radius: 999px;
-  color: $text-color;
-  display: inline-block;
-  font-family: $basefont;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 1.5em;
-  margin: 10px;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: background-color .2s ease-in-out;
-  white-space: nowrap;
+	background-color: $button-color;
+	border: 1px solid $button-border-color;
+	border-radius: 999px;
+	color: $text-color;
+	display: inline-block;
+	font-family: $basefont;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 1.5em;
+	margin: 10px;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	transition: background-color .2s ease-in-out;
+	white-space: nowrap;
 
-  &:focus {
-    color: $text-color;
-  }
+	&:focus, &:hover, &:active {
+		color: $text-color;
+	}
 
-  &:hover {
-    color: $text-color;
-    cursor: pointer;
-    opacity: .8;
-    text-decoration: none;
-  }
+	&:hover {
+		cursor: pointer;
+		opacity: .8;
+		text-decoration: none;
+	}
 
-  &:active {
-    color: $text-color;
-    opacity: 1;
-  }
+	&:active {
+		opacity: 1;
+	}
 
-  &:first-child {
-    margin-left: 0;
-  }
+	&:first-child {
+		margin-left: 0;
+	}
 
-  &:last-child {
-    margin-right: 0;
-  }
+	&:last-child {
+		margin-right: 0;
+	}
 
-  // Sizes
-  &.button-big {
-    font-size: 16px;
-    padding: 10px 30px;
+	// Sizes
+	&.button {
+		&-big {
+			font-size: 16px;
+			padding: 10px 30px;
 
-    @include breakpoint(bp-large) {
-      padding: 10px 40px;
-    }
-  }
+			@include breakpoint(bp-large) {
+				padding: 10px 40px;
+			}
+		}
 
-  &.button-small {
-    font-size: 11px;
-    line-height: 14px;
-    padding: 6px 20px;
-  }
+		&-small {
+			font-size: 11px;
+			line-height: 14px;
+			padding: 6px 20px;
+		}
 
-  &.button-huge {
-    font-size: 16px;
-    padding: 15px 30px;
+		&-huge {
+			font-size: 16px;
+			padding: 15px 30px;
 
-    @include breakpoint(bp-large) {
-      font-size: 18px;
-      padding: 18px 50px;
-    }
+			@include breakpoint(bp-large) {
+				font-size: 18px;
+				padding: 18px 50px;
+			}
 
-    i {
-      font-size: 20px;
-    }
-  }
+			i {
+				font-size: 20px;
+			}
+		}
 
-  &.button-large {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 320px;
-    width: 100%;
-  }
+		&-large {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 320px;
+			width: 100%;
+		}
+	}
 
-  // colors
-  &.button-primary {
-    background-color: $brand-primary;
-    border: 1px solid $brand-primary;
-    color: $white;
+	// colors
+	&.button-primary {
+		background-color: $brand-primary;
+		border: 1px solid $brand-primary;
+		color: $white;
 
-    &:hover {
-      color: $white;
-    }
-  }
+		&:hover {
+			color: $white;
+		}
+	}
 
-  &.button-secondary {
-    background-color: $brand-secondary;
-    border: 1px solid $brand-secondary;
-    color: $white;
+	&.button-secondary {
+		background-color: $brand-secondary;
+		border: 1px solid $brand-secondary;
+		color: $white;
 
-    &:hover {
-      color: $white;
-    }
-  }
+		&:hover {
+			color: $white;
+		}
+	}
 
-  &.button-transparent {
-    background-color: transparent;
-    border: 1px solid transparent;
-  }
+	&.button-transparent {
+		background-color: transparent;
+		border: 1px solid transparent;
+	}
 
-  &.button-white {
-    background-color: $white;
-    border: 1px solid $white;
-    color: $brand-primary;
-  }
+	&.button-white {
+		background-color: $white;
+		border: 1px solid $white;
+		color: $brand-primary;
+	}
 
-  &.button-green {
-    background-color: $color-success;
-    border-color: $color-success;
-    color: $white;
-  }
+	&.button-green {
+		background-color: $color-success;
+		border-color: $color-success;
+		color: $white;
+	}
 
-  &.button-red {
-    background-color: $color-error;
-    border-color: $color-error;
-    color: $white;
-  }
+	&.button-red {
+		background-color: $color-error;
+		border-color: $color-error;
+		color: $white;
+	}
 
-  // types
-  &.button-outlined {
-    background-color: transparent;
-    border: 1px solid $brand-primary;
-    color: $brand-primary;
-  }
+	// types
+	&.button-outlined {
+		background-color: transparent;
+		border: 1px solid $brand-primary;
+		color: $brand-primary;
+	}
 
-  &.button-disabled {
-    cursor: default;
-    opacity: .4;
-  }
+	&.button-disabled {
+		cursor: default;
+		opacity: .4;
+	}
 
-  &.button-only-icon {
-    height: 43px;
-    padding: 0;
-    width: 43px;
+	&.button-only-icon {
+		height: 43px;
+		padding: 0;
+		width: 43px;
 
-    i {
-      margin: 0;
-    }
-  }
+		i {
+			margin: 0;
+		}
+	}
 
-  // icons on buttons
-  i {
-    bottom: -2px;
-    font-size: 12px;
-    margin-left: .8em;
-    margin-right: .8em;
-    position: relative;
-    transition: all .3s ease;
+	// icons on buttons
+	i {
+		bottom: -2px;
+		font-size: 12px;
+		margin-left: .8em;
+		margin-right: .8em;
+		position: relative;
+		transition: all .3s ease;
 
-    &:last-child {
-      margin-right: 0;
-    }
+		&:last-child {
+			margin-right: 0;
+		}
 
-    &:first-child {
-      margin-left: 0;
-    }
+		&:first-child {
+			margin-left: 0;
+		}
 
-    &::before {
-      float: left;
-    }
-  }
+		&::before {
+			float: left;
+		}
+	}
 }
 
 .button-link {
-  color: $brand-primary;
-  font-family: 'Lato', sans-serif;
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
+	color: $brand-primary;
+	font-family: 'Lato', sans-serif;
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
 
-  i {
-    font-size: 18px;
-    line-height: 14px;
-    margin-bottom: -2px;
-    margin-left: 4px;
-    margin-right: 8px;
-    transition: all .3s ease;
+	i {
+		font-size: 18px;
+		line-height: 14px;
+		margin-bottom: -2px;
+		margin-left: 4px;
+		margin-right: 8px;
+		transition: all .3s ease;
 
-    &::before {
-      float: left;
-    }
-  }
-  // (animation rotating icon)
-  &.button-link-rotated {
-    i {
-      transform: rotate(-180deg);
-    }
-  }
+		&::before {
+			float: left;
+		}
+	}
+	// (animation rotating icon)
+	&.button-link-rotated {
+		i {
+			transform: rotate(-180deg);
+		}
+	}
 }
 
 // button group
 .button-group {
-  white-space: nowrap;
+	white-space: nowrap;
 
-  a,
-  .button {
-    border-radius: 0;
-    border-right: 0;
-    display: inline-block;
-    margin: 0;
-  }
+	a,
+	.button {
+		border-radius: 0;
+		border-right: 0;
+		display: inline-block;
+		margin: 0;
+	}
 
-  a:first-child,
-  .button:first-child {
-    border-bottom-left-radius: 99px;
-    border-top-left-radius: 99px;
-  }
+	a:first-child,
+	.button:first-child {
+		border-bottom-left-radius: 99px;
+		border-top-left-radius: 99px;
+	}
 
-  a:last-child,
-  .button:last-child {
-    border-bottom-right-radius: 99px;
-    border-top-right-radius: 99px;
-  }
+	a:last-child,
+	.button:last-child {
+		border-bottom-right-radius: 99px;
+		border-top-right-radius: 99px;
+	}
 }
