Tipography renamed to Typography, and some font size base merge

--- a/src/_sierra.scss
+++ b/src/_sierra.scss
@@ -19,7 +19,7 @@
 @import 'scss/tables';
 @import 'scss/tabs';
 @import 'scss/tags';
-@import 'scss/tipography';
+@import 'scss/typography';
 
 @if $flexboxgrid {
 	@import 'scss/flexboxgrid';
