--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -21,7 +21,7 @@ $font-size-base-medium: 15px;
 $font-size-base-large:  15px;
 
 $line-height-base:      1.5em;
-
+$font-weight-base:		400;
 
 /**
 *  $COLOURS
