Moved some files around

--- a/src/_sierra.scss
+++ b/src/_sierra.scss
@@ -2,9 +2,9 @@
  * Library
  */
 
-@import 'scss/mixins';
+@import 'scss/utils/mixins';
 @import 'scss/placeholders';
-@import 'scss/reset';
+@import 'scss/vendor/reset';
 
 @import 'scss/main';
 
